--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "test_jest": "jest --watchAll ",
     "precommit": "lint-staged",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
@@ -34,6 +35,8 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "eslint": "^5.5.0",
+    "eslint-plugin-standard": "^4.0.0",
     "jest": "^20.0.4"
   }
 }
