on dev branch eslint fix before

--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -1,11 +1,10 @@
 {
   "extends": [
-    "standard",
+    "eslint:recommended",
     "plugin:react/recommended"
   ],
   "plugins": [
     "import",
-    "react",
     "standard"
   ],
   "parser": "babel-eslint",
