--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "eslint": "^5.5.0",
+    "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
-    "jest": "^20.0.4"
+    "jest": "^20.0.4",
+    "why-did-you-update": "^0.1.1"
   }
 }
