--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "chai": "^4.1.2",
     "enzyme": "^3.6.0",
     "eslint": "^5.5.0",
     "eslint-plugin-react": "^7.11.1",
