--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material/image-list": "^0.39.1",
     "ajv": "^6.5.2",
     "babel-plugin-emotion": "^9.2.8",
     "emotion": "^9.2.8",
     "firebase": "^5.3.0",
     "jest-cli": "^23.5.0",
+    "material-ui-search-bar": "^0.4.2",
     "npx": "^10.2.0",
     "prop-types": "^15.6.2",
     "re-base": "^4.0.0",
