--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://roni5.github.io/react-fire/",
   "name": "react-fire",
   "version": "0.1.0",
   "private": true,
@@ -8,7 +9,6 @@
     "emotion": "^9.2.8",
     "firebase": "^5.3.0",
     "jest-cli": "^23.5.0",
-    "material-ui-search-bar": "^0.4.2",
     "npx": "^10.2.0",
     "prop-types": "^15.6.2",
     "re-base": "^4.0.0",
@@ -25,6 +25,7 @@
     ]
   },
   "scripts": {
+    "deploy": "yarn build && gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "precommit": "lint-staged",
@@ -40,6 +41,7 @@
     "eslint": "^5.5.0",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
+    "gh-pages": "^1.2.0",
     "https-proxy-agent": "^2.2.1",
     "jest": "^20.0.4",
     "react-test-renderer": "^16.5.0",
