--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     ]
   },
   "scripts": {
-    "deploy": "yarn build && gh-pages -d build",
+    "deploy": "npm run build && gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "precommit": "lint-staged",
